# mcp-core

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: crate-tests.yml
examples/: cli_client.rs  sse-server.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/echo/src/: client.rs  echo.rs  server.rs
examples/file_system/: Cargo.toml  README.md
examples/file_system/src/: main.rs  server.rs
examples/file_system/src/tools/: common.rs  get_file_info.rs  list_directory.rs  read_file.rs  search_files.rs
examples/knowledge_graph_memory/: Cargo.toml
examples/knowledge_graph_memory/src/: main.rs
examples/pingpong/: Cargo.toml
examples/pingpong/src/: client.rs  lib.rs  main.rs  ping.rs  server.rs
examples/sse/: Cargo.toml
examples/sse/src/: client.rs  server.rs
mcp-core/: Cargo.toml
mcp-core-macros/: Cargo.toml
mcp-core-macros/src/: lib.rs
mcp-core/examples/: echo_server.rs  echo_server_macro.rs
mcp-core/examples/echo/: Cargo.toml
mcp-core/examples/file_system/src/: server.rs
mcp-core/examples/file_system/src/tools/: get_file_info.rs  mod.rs  read_file.rs
mcp-core/src/: lib.rs  protocol.rs  server.rs  tools.rs
mcp-core/src/transport/: mod.rs
mcp-core/src/transport/client/: stdio.rs
mcp-core/src/transport/server/: mod.rs  sse.rs  stdio.rs
src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs  tools.rs
src/client/: basic.rs  mod.rs  secure.rs  types.rs
src/logging/: mod.rs
src/prompts/: mod.rs
src/protocol/: mod.rs  types.rs
src/resource/: mod.rs
src/server/: config.rs  mod.rs
src/sse/: http_server.rs
src/tools/: calculator.rs  mod.rs  test_tool.rs
src/tools/file_system/: directory.rs  mod.rs  read.rs  search.rs  write.rs
src/transport/: http_transport.rs  inmemory_transport.rs  mod.rs  sse.rs  sse_transport.rs  stdio.rs  stdio_transport.rs  ws_transport.rs
src/transport/client/: mod.rs  sse.rs  stdio.rs
src/transport/server/: mod.rs  sse.rs  stdio.rs
tests/: clients.rs  e2e.rs  protocol.rs  resource.rs  sse_client.rs  tools.rs
tests/resources/test/: data.json  hello.txt
