[package]
name = "sse"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../..", features = ["http"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
home = "0.5.9"
thiserror = "2.0.11"

[[bin]]
name = "sse_server"
path = "./src/server.rs"

[[bin]]
name = "sse_client"
path = "./src/client.rs"
