[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../..", features = ["sse"] }
mcp-core-macros = { path = "../../mcp-core-macros" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
home = "0.5.9"
schemars = "0.8"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "echo_server"
path = "./src/server.rs"

[[bin]]
name = "echo_client"
path = "./src/client.rs"
